<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/key" />

    <EditText
        android:id="@+id/key_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_key_here"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/value" />

    <EditText
        android:id="@+id/value_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/type_value_here"
        android:padding="8dp" />

    <Button
        android:id="@+id/write_to_cloud_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="writeToCloud"
        android:padding="16dp"
        android:text="@string/write_to_cloud"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/read_from_cloud_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="readFromCloud"
        android:padding="16dp"
        android:text="@string/read_from_cloud"
        android:textAllCaps="true" />

</LinearLayout>